Получения курсов от Нац банка и адаптирования цена под курс валюты

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,21 @@ Thumbs.db
 /front/
 /bash.sh
 
+/location_filter_3.html
+/adress.html
+/filter-improvement.zip
+/Frame 1.svg
+/location_filter_1.html
+/location_filter_5.html
+/location_filter_7.html
+/RealtBank.svg
+/location_filter_2.html
+/location_filter.html
+/location_filter_4.html
+/location_filter_6.html
+/location_filter_test_1.html
+/t.md
+/test.html
+/test.json
+/test.sql
+/ttt.txt
