--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ Thumbs.db
 /test.json
 /test.sql
 /ttt.txt
+/location-filter/
+/location_filter_6_prod.html
+/location_filter_7_prod.html
+/location_filter_8_final.html
+/location_filter_7_prod_2.html
