--- a/compose.yaml
+++ b/compose.yaml
@@ -53,7 +53,7 @@ services:
         image: phpmyadmin
         container_name: "${APP_NAME}-phpmyadmin"
         ports:
-            - '8081:80'
+            - '${FORWARD_PHPMYADMIN_PORT:-8081}:80'
         environment:
             PMA_HOST: mysql
             PMA_USER: '${DB_USERNAME}'
